# pyfin

./: .coveragerc  .gitignore  Pipfile  README.md  apple.py  pyfin.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
pyfin/: apple.py  pyfin.py  stock.py
pyfin/tests/: test_stock.py
tests/: test_pyfin.py
