[tool.poetry]
name = "pyfin"
version = "0.1.0"
description = "Python finance project with trading"
authors = ["Aaron Addleman <aaronaddleman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
pandas = "^1.4.3"
pytest-cov = "^3.0.0"
numpy = "^1.23.1"
yfinance = "^0.1.74"
pandas-datareader = "^0.10.0"
alpaca-trade-api = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
